css stylesheet added

--- a/templates/login.html
+++ b/templates/login.html
@@ -7,7 +7,7 @@
     <title>Calepin</title>
     <link href="{{ url_for('static', filename='css/bootstrap.css') }}" rel="stylesheet">
     <script src="{{ url_for('static', filename='js/jquery-1.11.3.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/bootstrap.js') }}"></script>
+    <script src="{{ url_for('static', filename='/js/bootstrap.js') }}"></script>
     <script src="{{ url_for('static', filename='js/imagesloaded.pkgd.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/masonry.pkgd.js') }}"></script>
     </head>
