--- a/templates/login.html
+++ b/templates/login.html
@@ -13,6 +13,9 @@
     </head>
   <body>
 {% block body %}
+<div class="container">
+          <div class="row">
+            <div class="col-md-10">
   <h2>Login</h2>
   {% if error %}<p class="alert alert-warning error"><a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a><strong>Error:</strong> {{ error }}{% endif %}
   <form action="{{ url_for('login') }}" method="post">
@@ -24,6 +27,9 @@
       <dd><input type="submit" value="Login"></dd>
     </dl>
 </form></p>
+</div>
+</div>
+</div>
 {% endblock %}
 </body>
 </html>
