--- a/templates/note.html
+++ b/templates/note.html
@@ -3,7 +3,7 @@
     <div class="panel-heading">
       {{ note.timestamp.strftime('%b %d, %Y %I:%M%p').lower() }}
       <a
-        class="btn btn-danger btn-xs archive-note pull-right"
+        class="btn btn-default btn-xs archive-note pull-right"
         data-note="{{ note.id }}"
         href="{{ url_for('archive_note', pk=note.id) }}">&times;</a>
     </div>
