--- a/templates/note.html
+++ b/templates/note.html
@@ -5,7 +5,11 @@
       <a
         class="btn btn-default btn-xs archive-note pull-right"
         data-note="{{ note.id }}"
-        href="{{ url_for('archive_note', pk=note.id) }}">&times;</a>
+        href="{{ url_for('archive_note', pk=note.id) }}">&times; archive</a>
+      <a
+        class="btn btn-default btn-xs edit-note pull-right"
+        data-note="{{ note.id }}"
+        href="{{ url_for('edit_note', pk=note.id) }}"><span class="glyphicon glyphicon-edit"> edit</span></a>
     </div>
     <div class="panel-body">
       {{ note.html() }}
