--- a/templates/edit.html
+++ b/templates/edit.html
@@ -14,20 +14,26 @@
   <body>
 {% block body %}
 <div class="container">
-    <h2><a href="{{ url_for('homepage') }}"Edit</a></h2>
+    <h2><a href="{{ url_for('homepage') }}">Edit</a></h2>
           <div class="row">
             <div class="col-md-10">
-            <h2><a href="{{ url_for('homepage') }}">Edit</a></h2>
   {% if error %}<p class="alert alert-warning error"><a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a><strong>Error:</strong> {{ error }}</p>{% endif %}
   <form action="." class="form" id="note-form" method="post">
     <button class="btn btn-primary btn-xs" type="submit">
       <span class="glyphicon glyphicon-plus"></span> Submit changes
     </button>
+    <button class="btn btn-primary btn-xs pull-right" id="rightchevbutton" type="button">
+            <span class="glyphicon glyphicon-chevron-right"></span></button>
+    <button class="btn btn-primary btn-xs pull-right" id="leftchevbutton" type="button">
+            <span class="glyphicon glyphicon-chevron-left"></span></button>
+    <button class="btn btn-primary btn-xs pull-right" id="embedbutton" type="button">
+        <span class="glyphicon glyphicon-picture"></span></button>
     <textarea class="form-control" id="content" name="content">{{ note.content }}</textarea>
 </form>
 </div>
 </div>
 </div>
 {% endblock %}
+<script src="{{ url_for('static', filename='js/site.js') }}"></script>
 </body>
 </html>
